--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
-    "@tailwindcss/postcss": "^4.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "glsl-random": "^0.0.5",
@@ -37,7 +36,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -48,7 +47,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.1.1",
     "raw-loader": "^4.0.2",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "3",
     "url-loader": "^4.1.1"
   }
 }
